# speed-hack-sandbox

./: .gitmodules  README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gkcore.cpp  tramp.S
app/src/main/java/io/github/seuuser/speedhksb/: FloatService.kt  GKApplication.kt  MainActivity.kt
app/src/main/java/io/github/seuuser/speedhksb/core/: HookInstaller.kt
app/src/main/res/layout/: activity_main.xml  float_panel.xml
